# buffers

./: .stylish-haskell.yaml  buffers.cabal  default.nix  hie.yaml  shell.nix
nix/: pkgs.nix
nix/extensions/: array-exceptions.nix  buffers.nix  prim-bool.nix  prim-compat.nix  utf8-text.nix
nix/exts/: array-exceptions.nix  utf8-text.nix
nix/pkgs/: array-exceptions.nix  utf8-text.nix
src/Data/: Buffer.hs  Slice.hs
src/Data/Buffer/: Core.hs  IO.hs  Prim.hs  Unsafe.hs
src/Data/Slice/: Core.hs
