cabal-version: 2.4

name:        buffers
category:    Data
version:     1.0.0
synopsis:    TODO
description: TODO

author:       jacob leach
maintainer:   jacobleach@protonmail.com
copyright:    2022, Jacob Leach
homepage:     https://github.com/riz0id/buffers
license:      ISC
license-file: LICENSE
build-type:   Simple

extra-source-files:
  CHANGELOG.md
  README.md

tested-with:
  GHC == 9.2.4
  GHC == 9.4.2

common common
  default-language: Haskell2010

  default-extensions:
    BlockArguments DeriveDataTypeable DeriveGeneric DeriveLift GADTs 
    ImportQualifiedPost KindSignatures PatternSynonyms RankNTypes
    StandaloneKindSignatures

  ghc-options:
    -Wall
    -Wcompat
    -Wcpp-undef
    -Widentities
    -Wmissing-export-lists

    -ddump-to-file
    -ddump-stg-final
    -ddump-simpl
    -dppr-cols=120
    -dsuppress-module-prefixes
    -- -dsuppress-uniques

  build-depends:
    , base >= 4.15.1 && < 4.18

library
  import:         common
  hs-source-dirs: src

  ghc-options:
    -O2
    -fmax-simplifier-iterations=20
    -fregs-iterative
    -j4

  build-depends:
    , array-exceptions >= 1.0.0  && < 1.1.0
    , primitive        >= 0.7.3  && < 0.8
    , prim-bool        >= 1.0.0  && < 1.1.0
    , template-haskell >= 2.18.0 && < 2.20
    , utf8-text        >= 1.0.0  && < 1.1.0

  exposed-modules:
    Data.Buffer
    Data.Buffer.IO
    Data.Buffer.Prim
    Data.Buffer.Unsafe
    Data.Slice

  other-modules:
    Data.Buffer.Core
    Data.Slice.Core